--- a/main.html
+++ b/main.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to Accio Jobs!</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>Welcome to Accio Jobs!</h1>
+  <h1>Welcome to Accio Jobs!</h1> <!-- Heading -->
+  
+  <img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" alt="Image" style="height: 300px;"> <!-- Image -->
 
-	<img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" alt="Image link" height="300px">
+  <p>5 software program developer profession paths</p> <!-- Paragraph -->
 
-	<p>5 software program developer profession paths</p>
-
- <ul>
-        <li>Cloud Development</li>
-        <li>Desktop Development</li>
-        <li>Video Game Development</li>
-        <li>Mobile Development</li>
-        <li>Web Development</li>
-    </ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <ul> <!-- Unordered List -->
+    <li>Cloud development</li>
+    <li>Desktop development</li>
+    <li>Video Game development</li>
+    <li>Mobile development</li>
+    <li>Web development</li>
+  </ul>
 </body>
-
 </html>
